# la-envia-llc

./: .env.example  .gitignore  CLAUDE.md  README.md  VERIFICATION-REPORT.md  main.py  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: COSTOS-OPTIMIZADOS-GROK.md  MANUAL-DE-USO.md  SIGUIENTES-PASOS.md  technical_validator_usage.md
docs/plans/: 2026-01-17-dashboard-design.md  2026-01-17-dashboard-implementation.md  2026-01-17-execution-design.md  2026-01-17-execution-implementation.md  2026-01-17-journal-design.md  2026-01-17-journal-implementation.md  2026-01-17-market-gate-design.md  2026-01-17-market-gate-implementation.md  2026-01-17-notifications-design.md  2026-01-17-notifications-plan.md  2026-01-17-orchestrator-design.md  2026-01-17-orchestrator-implementation.md  2026-01-17-phase1-core-implementation.md  2026-01-17-phase2-sentiment-analysis.md  2026-01-17-risk-implementation.md  2026-01-17-risk-management.md  2026-01-17-scoring-system.md  2026-01-17-technical-validation.md  2026-01-17-trading-system-design.md  2026-01-17-validation-design.md  2026-01-17-validation-implementation.md  2026-01-18-grok-implementation.md  2026-01-18-grok-integration-design.md  2026-01-18-main-integration-design.md  2026-01-18-main-integration-implementation.md  2026-01-18-morning-research-agent-design.md  2026-01-18-morning-research-agent-implementation.md
scripts/: README.md  setup_twitter_accounts.py
src/analyzers/: __init__.py  analyzed_message.py  analyzer_manager.py  claude_analyzer.py  claude_result.py  sentiment_analyzer.py  sentiment_result.py
src/collectors/: __init__.py  base.py  collector_manager.py  (+4 more)
tests/: test_main.py
(+185 files in other folders)
