[project]
name = "intraday-trading-system"
version = "0.1.0"
description = "AI-powered intraday trading system with social media analysis"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "alpaca-py>=0.43.2",
    "anthropic>=0.76.0",
    "openai>=2.15.0",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "streamlit>=1.53.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "yfinance>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
